rta initial commit

--- a/sass/_original.scss
+++ b/sass/_original.scss
@@ -230,6 +230,7 @@ html{
 
 .anne-info-wrapper img{
     transition:all 0.4s ease-in-out;
+    max-height:200px;
 }
 
 .anne-info-wrapper:hover img{
