added all seasons

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,7 @@
 @import "home-new";
 @import "global";
 @import "original";
+@import "seasons";
 @import "characters";
 @import "films";
 @import "blog";
