--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -491,7 +492,7 @@ nav div {
   margin: 0 auto;
   margin-bottom: 20px; }
 
-html body .page .film-wrapper a, .shop-btn, .film-wrapper button {
+html body .page .film-wrapper a, .shop-btn, .film-wrapper button, .read-more-seasons {
   font-family: Arial, Helvetica, sans-serif;
   background: #096162;
   border: 2px solid #096162;
@@ -521,6 +522,9 @@ html body .page .film-wrapper a, .shop-btn, .film-wrapper button {
   border: 2px solid #096162;
   background: transparent !important;
   color: #096162 !important; }
+
+.video-container {
+  margin-top: 90px; }
 
 .article__content a:not([class]) {
   border-bottom: initial; }
@@ -2037,9 +2041,139 @@ header {
   .img-comp-container {
     display: none; } }
 
-@media (max-width: 990px) {
-  .page-template-characters-page .col-md-4 {
-    margin-bottom: 20px; } }
+.page-template-season-1 h1, .page-template-season-2 h1, .page-template-season-3 h1, .page-template-season-4 h1,
+.page-template-season-5 h1, .page-template-season-6 h1, .page-template-season-7 h1 {
+  margin-top: 55px; }
+
+.page-template-season-1 h3, .page-template-season-2 h3, .page-template-season-3 h3, .page-template-season-4 h3,
+.page-template-season-5 h3, .page-template-season-6 h3, .page-template-season-7 h3 {
+  font-size: 33px;
+  font-family: "trajan-regular-pro"; }
+
+.page-template-season-1 h4, .page-template-season-2 h4, .page-template-season-3 h4, .page-template-season-4 h4,
+.page-template-season-5 h4, .page-template-season-6 h4, .page-template-season-7 h4 {
+  font-family: "trajan-regular-pro";
+  font-size: 24px; }
+
+.page-template-season-1 .flex-wrap-season, .page-template-season-2 .flex-wrap-season, .page-template-season-3 .flex-wrap-season, .page-template-season-4 .flex-wrap-season,
+.page-template-season-5 .flex-wrap-season, .page-template-season-6 .flex-wrap-season, .page-template-season-7 .flex-wrap-season {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
+.page-template-season-1 .summary-wrap, .page-template-season-2 .summary-wrap, .page-template-season-3 .summary-wrap, .page-template-season-4 .summary-wrap,
+.page-template-season-5 .summary-wrap, .page-template-season-6 .summary-wrap, .page-template-season-7 .summary-wrap {
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 2; }
+  .page-template-season-1 .summary-wrap .highlight li, .page-template-season-2 .summary-wrap .highlight li, .page-template-season-3 .summary-wrap .highlight li, .page-template-season-4 .summary-wrap .highlight li,
+  .page-template-season-5 .summary-wrap .highlight li, .page-template-season-6 .summary-wrap .highlight li, .page-template-season-7 .summary-wrap .highlight li {
+    position: relatiive; }
+    .page-template-season-1 .summary-wrap .highlight li:before, .page-template-season-2 .summary-wrap .highlight li:before, .page-template-season-3 .summary-wrap .highlight li:before, .page-template-season-4 .summary-wrap .highlight li:before,
+    .page-template-season-5 .summary-wrap .highlight li:before, .page-template-season-6 .summary-wrap .highlight li:before, .page-template-season-7 .summary-wrap .highlight li:before {
+      content: '»';
+      position: absolute;
+      left: 0; }
+
+.page-template-season-1 .vid-thumbnail, .page-template-season-2 .vid-thumbnail, .page-template-season-3 .vid-thumbnail, .page-template-season-4 .vid-thumbnail,
+.page-template-season-5 .vid-thumbnail, .page-template-season-6 .vid-thumbnail, .page-template-season-7 .vid-thumbnail {
+  margin-bottom: 30px; }
+
+.page-template-season-1 .guest-list-1, .page-template-season-2 .guest-list-1, .page-template-season-3 .guest-list-1, .page-template-season-4 .guest-list-1,
+.page-template-season-5 .guest-list-1, .page-template-season-6 .guest-list-1, .page-template-season-7 .guest-list-1 {
+  line-height: 2;
+  font-size: 21px; }
+
+.page-template-season-1 .video-episode-list p, .page-template-season-2 .video-episode-list p, .page-template-season-3 .video-episode-list p, .page-template-season-4 .video-episode-list p,
+.page-template-season-5 .video-episode-list p, .page-template-season-6 .video-episode-list p, .page-template-season-7 .video-episode-list p {
+  font-family: "trajan-regular-pro"; }
+
+.page-template-season-1 .video-episode-list, .page-template-season-2 .video-episode-list, .page-template-season-3 .video-episode-list, .page-template-season-4 .video-episode-list,
+.page-template-season-5 .video-episode-list, .page-template-season-6 .video-episode-list, .page-template-season-7 .video-episode-list {
+  line-height: 1.5; }
+
+.page-template-season-1 .button-hover, .page-template-season-2 .button-hover, .page-template-season-3 .button-hover, .page-template-season-4 .button-hover,
+.page-template-season-5 .button-hover, .page-template-season-6 .button-hover, .page-template-season-7 .button-hover {
+  position: relative;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  overflow: hidden;
+  height: 40px;
+  min-width: 120px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 2px solid #096162; }
+
+.page-template-season-1 .button-hover a, .page-template-season-2 .button-hover a, .page-template-season-3 .button-hover a, .page-template-season-4 .button-hover a,
+.page-template-season-5 .button-hover a, .page-template-season-6 .button-hover a, .page-template-season-7 .button-hover a {
+  -webkit-transition: all .5s ease;
+  transition: all .5s ease;
+  z-index: 2;
+  position: relative; }
+
+.page-template-season-1 .button-hover:hover a, .page-template-season-2 .button-hover:hover a, .page-template-season-3 .button-hover:hover a, .page-template-season-4 .button-hover:hover a,
+.page-template-season-5 .button-hover:hover a, .page-template-season-6 .button-hover:hover a, .page-template-season-7 .button-hover:hover a {
+  color: #fff; }
+
+.page-template-season-1 .eff, .page-template-season-2 .eff, .page-template-season-3 .eff, .page-template-season-4 .eff,
+.page-template-season-5 .eff, .page-template-season-6 .eff, .page-template-season-7 .eff {
+  width: 100%;
+  height: 40px;
+  left: -140px;
+  background: #096162;
+  position: absolute;
+  -webkit-transition: all 0.7s ease;
+  transition: all 0.7s ease;
+  z-index: 1; }
+
+.page-template-season-1 .christmas-hover, .page-template-season-2 .christmas-hover, .page-template-season-3 .christmas-hover, .page-template-season-4 .christmas-hover,
+.page-template-season-5 .christmas-hover, .page-template-season-6 .christmas-hover, .page-template-season-7 .christmas-hover {
+  max-width: 135px;
+  margin: 0 auto;
+  margin-bottom: 30px; }
+
+.page-template-season-1 .christmas-btn, .page-template-season-2 .christmas-btn, .page-template-season-3 .christmas-btn, .page-template-season-4 .christmas-btn,
+.page-template-season-5 .christmas-btn, .page-template-season-6 .christmas-btn, .page-template-season-7 .christmas-btn {
+  margin: 0 auto; }
+
+.page-template-season-1 .button-hover:hover .eff, .page-template-season-2 .button-hover:hover .eff, .page-template-season-3 .button-hover:hover .eff, .page-template-season-4 .button-hover:hover .eff,
+.page-template-season-5 .button-hover:hover .eff, .page-template-season-6 .button-hover:hover .eff, .page-template-season-7 .button-hover:hover .eff {
+  left: 0; }
+
+.page-template-season-1 .show-episode, .page-template-season-2 .show-episode, .page-template-season-3 .show-episode, .page-template-season-4 .show-episode,
+.page-template-season-5 .show-episode, .page-template-season-6 .show-episode, .page-template-season-7 .show-episode {
+  margin-left: 31%;
+  background: transparent;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border-radius: 5px;
+  margin-top: 10px;
+  font-size: 33px; }
+
+.page-template-season-1 body .button-hover:hover a, .page-template-season-2 body .button-hover:hover a, .page-template-season-3 body .button-hover:hover a, .page-template-season-4 body .button-hover:hover a,
+.page-template-season-5 body .button-hover:hover a, .page-template-season-6 body .button-hover:hover a, .page-template-season-7 body .button-hover:hover a {
+  color: #fff !important; }
+
+.page-template-characters-page article {
+  height: 410px;
+  margin: 85px 0; }
+
+.page-template-characters-page .col-lg-4 {
+  font-family: Arial, Helvetica, sans-serif; }
+  @media (max-width: 990px) {
+    .page-template-characters-page .col-lg-4 {
+      margin-bottom: 20px;
+      text-align: center;
+      margin: 25px 0; } }
 
 .page-template-characters-page .site-header button, .page-template-characters-page .site-header a {
   color: #000; }
@@ -2264,6 +2398,128 @@ header {
 
 .category .date, .search .date {
   font-family: Arial, Helvetica, sans-serif; }
+
+.page-template-season-1 h1, .page-template-season-2 h1, .page-template-season-3 h1, .page-template-season-4 h1,
+.page-template-season-5 h1, .page-template-season-6 h1, .page-template-season-7 h1 {
+  margin-top: 55px; }
+
+.page-template-season-1 h3, .page-template-season-2 h3, .page-template-season-3 h3, .page-template-season-4 h3,
+.page-template-season-5 h3, .page-template-season-6 h3, .page-template-season-7 h3 {
+  font-size: 33px;
+  font-family: "trajan-regular-pro"; }
+
+.page-template-season-1 h4, .page-template-season-2 h4, .page-template-season-3 h4, .page-template-season-4 h4,
+.page-template-season-5 h4, .page-template-season-6 h4, .page-template-season-7 h4 {
+  font-family: "trajan-regular-pro";
+  font-size: 24px; }
+
+.page-template-season-1 .flex-wrap-season, .page-template-season-2 .flex-wrap-season, .page-template-season-3 .flex-wrap-season, .page-template-season-4 .flex-wrap-season,
+.page-template-season-5 .flex-wrap-season, .page-template-season-6 .flex-wrap-season, .page-template-season-7 .flex-wrap-season {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
+.page-template-season-1 .summary-wrap, .page-template-season-2 .summary-wrap, .page-template-season-3 .summary-wrap, .page-template-season-4 .summary-wrap,
+.page-template-season-5 .summary-wrap, .page-template-season-6 .summary-wrap, .page-template-season-7 .summary-wrap {
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 2; }
+  .page-template-season-1 .summary-wrap .highlight li, .page-template-season-2 .summary-wrap .highlight li, .page-template-season-3 .summary-wrap .highlight li, .page-template-season-4 .summary-wrap .highlight li,
+  .page-template-season-5 .summary-wrap .highlight li, .page-template-season-6 .summary-wrap .highlight li, .page-template-season-7 .summary-wrap .highlight li {
+    position: relatiive; }
+    .page-template-season-1 .summary-wrap .highlight li:before, .page-template-season-2 .summary-wrap .highlight li:before, .page-template-season-3 .summary-wrap .highlight li:before, .page-template-season-4 .summary-wrap .highlight li:before,
+    .page-template-season-5 .summary-wrap .highlight li:before, .page-template-season-6 .summary-wrap .highlight li:before, .page-template-season-7 .summary-wrap .highlight li:before {
+      content: '»';
+      position: absolute;
+      left: 0; }
+
+.page-template-season-1 .vid-thumbnail, .page-template-season-2 .vid-thumbnail, .page-template-season-3 .vid-thumbnail, .page-template-season-4 .vid-thumbnail,
+.page-template-season-5 .vid-thumbnail, .page-template-season-6 .vid-thumbnail, .page-template-season-7 .vid-thumbnail {
+  margin-bottom: 30px; }
+
+.page-template-season-1 .guest-list-1, .page-template-season-2 .guest-list-1, .page-template-season-3 .guest-list-1, .page-template-season-4 .guest-list-1,
+.page-template-season-5 .guest-list-1, .page-template-season-6 .guest-list-1, .page-template-season-7 .guest-list-1 {
+  line-height: 2;
+  font-size: 21px; }
+
+.page-template-season-1 .video-episode-list p, .page-template-season-2 .video-episode-list p, .page-template-season-3 .video-episode-list p, .page-template-season-4 .video-episode-list p,
+.page-template-season-5 .video-episode-list p, .page-template-season-6 .video-episode-list p, .page-template-season-7 .video-episode-list p {
+  font-family: "trajan-regular-pro"; }
+
+.page-template-season-1 .video-episode-list, .page-template-season-2 .video-episode-list, .page-template-season-3 .video-episode-list, .page-template-season-4 .video-episode-list,
+.page-template-season-5 .video-episode-list, .page-template-season-6 .video-episode-list, .page-template-season-7 .video-episode-list {
+  line-height: 1.5; }
+
+.page-template-season-1 .button-hover, .page-template-season-2 .button-hover, .page-template-season-3 .button-hover, .page-template-season-4 .button-hover,
+.page-template-season-5 .button-hover, .page-template-season-6 .button-hover, .page-template-season-7 .button-hover {
+  position: relative;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  overflow: hidden;
+  height: 40px;
+  min-width: 120px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 2px solid #096162; }
+
+.page-template-season-1 .button-hover a, .page-template-season-2 .button-hover a, .page-template-season-3 .button-hover a, .page-template-season-4 .button-hover a,
+.page-template-season-5 .button-hover a, .page-template-season-6 .button-hover a, .page-template-season-7 .button-hover a {
+  -webkit-transition: all .5s ease;
+  transition: all .5s ease;
+  z-index: 2;
+  position: relative; }
+
+.page-template-season-1 .button-hover:hover a, .page-template-season-2 .button-hover:hover a, .page-template-season-3 .button-hover:hover a, .page-template-season-4 .button-hover:hover a,
+.page-template-season-5 .button-hover:hover a, .page-template-season-6 .button-hover:hover a, .page-template-season-7 .button-hover:hover a {
+  color: #fff; }
+
+.page-template-season-1 .eff, .page-template-season-2 .eff, .page-template-season-3 .eff, .page-template-season-4 .eff,
+.page-template-season-5 .eff, .page-template-season-6 .eff, .page-template-season-7 .eff {
+  width: 100%;
+  height: 40px;
+  left: -140px;
+  background: #096162;
+  position: absolute;
+  -webkit-transition: all 0.7s ease;
+  transition: all 0.7s ease;
+  z-index: 1; }
+
+.page-template-season-1 .christmas-hover, .page-template-season-2 .christmas-hover, .page-template-season-3 .christmas-hover, .page-template-season-4 .christmas-hover,
+.page-template-season-5 .christmas-hover, .page-template-season-6 .christmas-hover, .page-template-season-7 .christmas-hover {
+  max-width: 135px;
+  margin: 0 auto;
+  margin-bottom: 30px; }
+
+.page-template-season-1 .christmas-btn, .page-template-season-2 .christmas-btn, .page-template-season-3 .christmas-btn, .page-template-season-4 .christmas-btn,
+.page-template-season-5 .christmas-btn, .page-template-season-6 .christmas-btn, .page-template-season-7 .christmas-btn {
+  margin: 0 auto; }
+
+.page-template-season-1 .button-hover:hover .eff, .page-template-season-2 .button-hover:hover .eff, .page-template-season-3 .button-hover:hover .eff, .page-template-season-4 .button-hover:hover .eff,
+.page-template-season-5 .button-hover:hover .eff, .page-template-season-6 .button-hover:hover .eff, .page-template-season-7 .button-hover:hover .eff {
+  left: 0; }
+
+.page-template-season-1 .show-episode, .page-template-season-2 .show-episode, .page-template-season-3 .show-episode, .page-template-season-4 .show-episode,
+.page-template-season-5 .show-episode, .page-template-season-6 .show-episode, .page-template-season-7 .show-episode {
+  margin-left: 31%;
+  background: transparent;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border-radius: 5px;
+  margin-top: 10px;
+  font-size: 33px; }
+
+.page-template-season-1 body .button-hover:hover a, .page-template-season-2 body .button-hover:hover a, .page-template-season-3 body .button-hover:hover a, .page-template-season-4 body .button-hover:hover a,
+.page-template-season-5 body .button-hover:hover a, .page-template-season-6 body .button-hover:hover a, .page-template-season-7 body .button-hover:hover a {
+  color: #fff !important; }
 
 .single {
   font-family: 'Lato', sans-serif; }
