--- a/sass/_original.scss
+++ b/sass/_original.scss
@@ -11,7 +11,7 @@
     margin-bottom:20px;
 }
 
-html body .page .film-wrapper a, .shop-btn, .film-wrapper button{
+html body .page .film-wrapper a, .shop-btn, .film-wrapper button, .read-more-seasons{
     font-family:Arial, Helvetica, sans-serif;
     background: $mainColor;
     border: 2px solid $mainColor;
@@ -35,6 +35,10 @@ html body .page .film-wrapper a, .shop-btn, .film-wrapper button{
     border:2px solid $mainColor;
     background:transparent !important;
     color:$mainColor !important;
+}
+
+.video-container{
+    margin-top:90px;
 }
 
 .article__content a:not([class]){
@@ -1746,7 +1750,6 @@ button.mfp-arrow-left, button.mfp-arrow-right{
 
 @media only screen and (max-width:1024px){
 
-    
     .costume-list li{
         flex-basis:50%;
     }
